--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -2,6 +2,7 @@
 #new-player-form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 20em;
     margin-left: 2em;
 
@@ -30,5 +31,14 @@ button {
     color: #134611;
     font-style: italic;
     font-size: 2rem;
-    width: 30rem;
+    /* width: 30rem; */
+}
+
+.login_page_div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2%;
+    margin-left: 20%;
+    width: 50%;
 }
