--- a/src/components/AddPost.css
+++ b/src/components/AddPost.css
@@ -13,3 +13,20 @@
     font-size: 2rem;
     width: 30rem;
 }
+
+.add-post_page_div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2%;
+    margin-left: 20%;
+    width: 50%;
+}
+
+#description {
+    width: 50em
+}
+
+#title {
+    width: 30em
+}
